--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
 
     <modules>
@@ -42,6 +42,6 @@
     </build>
     <scm>
         <developerConnection>scm:git:https://github.com/mauly1/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
