--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sat Sep 04 08:10:33 IST 2021
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/mauly1/sfg-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Sat Sep 04 08:16:47 IST 2021
+project.rel.guru.springframework\:sfg-pet-clinic=0.0.1
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.guru.springframework\:pet-clinic-data=0.0.2-SNAPSHOT
+pushChanges=true
+project.rel.guru.springframework\:pet-clinic-data=0.0.1
+project.scm.guru.springframework\:pet-clinic-web.empty=true
+project.dev.guru.springframework\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.tag=sfg-pet-clinic-0.0.1
+project.rel.guru.springframework\:pet-clinic-web=0.0.1
+remoteTagging=true
+projectVersionPolicyId=default
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+project.scm.guru.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/mauly1/sfg-pet-clinic.git
+scm.url=scm\:git\:https\://github.com/mauly1/sfg-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+preparationGoals=clean verify
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.guru.springframework\:sfg-pet-clinic=0.0.2-SNAPSHOT
+project.scm.guru.springframework\:sfg-pet-clinic.tag=HEAD
+completedPhase=end-release
